--- a/wiki/OpenEVSE_DIY_Plus_spec.wiki
+++ b/wiki/OpenEVSE_DIY_Plus_spec.wiki
@@ -79,7 +79,7 @@ Brown = 1 - Red = 2 - Yellow = x 10,000
 
 =Assembly Guide=
 
-Coming soon...
+Under construction...
 
 ==Resistors==
 Resistors can be installed in either direction. To save time a few resistors can be placed, soldered then leads trimmed.
