Edited wiki page Hydra through web user interface.

--- a/wiki/Hydra.wiki
+++ b/wiki/Hydra.wiki
@@ -89,7 +89,8 @@ If desired, connect a SPST switch up to the POWER_SW terminals on the board. If 
 
 Lastly, connect the LCD up via the I2C cable. Unlike OpenEVSE, there is no support for the buttons.
 
-= First prototype report =
+= Real world reports =
+== First prototype report ==
 
 I got the first boards back from OSH Park over the last weekend (8/3/13) and assembled it. In the process, I made some discoveries that I will need to fix before I can recommend the boards to anyone else:
 
@@ -105,15 +106,23 @@ Meanwhile, the prototype design has been used at our office for a week now and h
 
 I have made the changes to the Eagle files and added them to the downloads. The hardware is officially v0.9. I am going to build a 0.9 board for the prototype and to validate the 0.9 design. If it has no errors, I'll re-label it as 1.0.
 
-= Second prototype report =
+== Second prototype report ==
 
 The second prototype (hardware v0.9) still didn't have the DC-DC converter spacing perfect, so there have been a couple of changes to the v1.0 board. But I am confident now that the 1.0 design is ready for release. You can find a zip file in the project downloads with the 1.0 .BRD and .SCH files for Eagle, along with a PDF schematic and the two DigiKey BOM files for ordering the parts.
+
+== Version 1.3 ==
+
+Since 1.0, ST Micro has deprecated the 2N2222 transistor. I've decided to replace it with a 2N4401, which despite being in a plastic case still has enough collector current to drive the relays with a large margin.
+
+Also, the Murata DC-DC converters went out-of-stock on DigiKey, so I've gone with CUI modules, which ironically enough require the 6 pin SIP layout of the original prototype.
+
+Version 1.3 is also the version that introduces the outgoing proximity circuitry.
 
 = How to =
 
 You will need:
 
-  # A circuit board from OSHPark. Currently, the 1.0 version board is recommended.
+  # A circuit board from OSHPark. Currently, the 1.3 version board is recommended.
   # An OpenEVSE RGB LCD backpack from the OpenEVSE store
   # The contents of the PCB BOM from DigiKey
   # The contents of the chassis BOM from DigiKey
@@ -122,7 +131,7 @@ You will need:
   # A case and 2 cable glands. I recommend a Polycase WC-40, a WX-42 internal mounting panel and 2 CG-16 cable glands.
   # If you don't have one, you'll need an AVR ISP programmer of some sort.
 
-The circuit board BOM from DigiKey is around $45 + tax and shipping. The chassis BOM (2 relays, 2 CTs, a pair of M-M-F quick connect adapters and a 12vdc power supply) is around $85 + tax and shipping. A J1772 inlet is $120 from Modular EV Power and J1772 cables are $150 each from Leviton. A box and two cable glands are around $50 from Polycase. So just in parts alone, a Hydra costs close to $700.
+The circuit board BOM from DigiKey is around $40 + tax and shipping. The chassis BOM (2 relays, 2 CTs, a pair of M-M-F quick connect adapters and a 12vdc power supply) is around $85 + tax and shipping. A J1772 inlet is $120 from Modular EV Power and J1772 cables are $150 each from Leviton. A box and two cable glands are around $50 from Polycase. So just in parts alone, a Hydra costs close to $700.
 
 Note that the circuit board BOM includes R8. Do not populate R8 if your inlet has a 2.7K resistor installed between proximity and ground. Also, note that R14 and R17 have been chosen with the presumption that your outgoing current limit is 30A and you're using the CTs on the chassis BOM.
 
