--- a/wiki/OpenEVSE_LCD_spec.wiki
+++ b/wiki/OpenEVSE_LCD_spec.wiki
@@ -57,14 +57,20 @@ Solder the pins the the LCD Module.
 
 http://i833.photobucket.com/albums/zz256/aeronutt/Open%20EVSE%20Plus%20v2/Shield3.jpg
 
-Finally - Power up your board connected to an OpenEVSE J1772 Controller.
+Power up your board connected to an OpenEVSE J1772 Controller.
 
 Adjust the contrast with a small screw driver until the lettering is bright but the background is still dark.
 
 =Adafruit Lit Button=
 If using the Lit Water resistant push button, connect the 5v to the + terminal, GND to - and C1 and the Select button to NO1.
-http://farm9.staticflickr.com/8189/8420626671_1428cc8f0f_c.jpg
+
+http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8220_medium.jpg]
+[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8221_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8221_medium.jpg]
+[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8222_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8222_medium.jpg]
+[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8223_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8223_medium.jpg]
+[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8225_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8225_medium.jpg]
+[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8226_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8226_medium.jpg]
+
 http://www.adafruit.com/datasheets/metal16mmbuttons.jpg
-http://farm9.staticflickr.com/8260/8662590903_afb140270e_c.jpg
 
 This evaluation board/kit is intended for use for ENGINEERING DEVELOPMENT, DEMONSTRATION, OR EVALUATION PURPOSES ONLY and is not considered to be a finished end-product fit for general consumer use.
