--- a/wiki/OpenEVSE_shield_guide.wiki
+++ b/wiki/OpenEVSE_shield_guide.wiki
@@ -8,7 +8,7 @@
 
 
 == Schematic, Board files, Gerber files =
-It is a good idea to print the schematic for reference.
+It is a good idea to have the schematic close by for reference.
 The schematic is located here:
 
 http://open-evse.googlecode.com/files/DIY_OpenEVSE_shield.zip
@@ -22,21 +22,20 @@ http://open-evse.googlecode.com/files/DIY_OpenEVSE_shield.zip
 ||DCDC||	D107E||	DC/DC converter||	1||	MicroPowerDirect||	D117E|| ||
 ||IC2||	LF353||	Opamp||	1||	Fairchild Semi||	LF353NFS-ND|| LF353 ||
 ||IC4||	Lm358||	Opamp||	1||	TI||	296-1395-5-ND|| LM368 ||
-||C3, C5||	1uf||	Capacitor||	2||	TDK||	445-8607-ND|| 105 ||
-||C4, C8||	.1uf||	Capacitor||	2||	Kemet||	399-9872-1-ND|| 104 ||
-||C6||	2.2uf||	Capacitor||	1||	TDK||	445-8514-ND|| 225 ||
+||C6, C7||	1uf||	Capacitor||	2||	TDK||	445-8607-ND|| 105 ||
+||C8||	.1uf||	Capacitor||	2||	Kemet||	399-9872-1-ND|| 104 ||
 ||C9||	10UF||	Capacitor||	1||	Panasonic||	P5148-ND|| ||
 ||TVS||	P6KE16CA||	TVS Diode||	1||	Littelfuse Inc|| 	P6KE16CA|| bi-directional ||
-||D1, D2, D3, D4||	1N4148||	Diode||	4||	Diodes Inc||	1N4148DICT-ND|| ||
+||D1, D3, D4||	1N4148||	Diode||	4||	Diodes Inc||	1N4148DICT-ND|| ||
 ||D5,D6	||1N5231 ||Diode||	2||	||	1N5231BVSCT-ND|| ||
-||Q1	||2n2222||	NPN Transistor||	2||	STMicroelectronics||	497-2598-ND|| ||
+||Q2	||2n2222||	NPN Transistor||	2||	STMicroelectronics||	497-2598-ND|| ||
 ||R1||	649||	Resistor||	1||	vishay||	PPC649YCT-ND|| Blue - Yellow - White - Black||
-||R2, R3||	2.4k||	Resistor||	2||	Panasonic	||CF14JT2K40CT-ND|| Red - Yellow - Red - Gold ||
-||R4, R11, R12, R17||	330||	Resistor||	4||	Panasonic||	CF14JT330RCT-ND|| Orange - Orange - Brown - Gold||
+
+||R11, R17||	330||	Resistor||	4||	Panasonic||	CF14JT330RCT-ND|| Orange - Orange - Brown - Gold||
 ||R5||	56k||	Resistor	||1	||Panasonic||	CF14JT56K0CT-ND|| Green - Blue - Orange - Gold ||
 ||R6, R8, R9, R14, R16||	100k||	Resistor||	5||	Panasonic||	CF14JT100K0CT-ND|| Brown - Black - Yellow - Gold ||
 ||R7||	200k||	Resistor||	1||	Panasonic||	CF14JT200K0CT-ND|| Red - Black - Yellow - Gold ||
-||R10, R19||	10k||	Resistor||	2||	Panasonic||	CF14JT10K0CT-ND|| Brown - Black - Orange - Gold ||
+||R19||	10k||	Resistor||	2||	Panasonic||	CF14JT10K0CT-ND|| Brown - Black - Orange - Gold ||
 ||R15||	20k||	Resistor||	1||	Panasonic||	CF14JT20K0CT-ND|| Red - Black - Orange - Gold ||
 ||R18||	150||	Resistor||	1||	Panasonic||	CF14JT150RCT-ND|| Brown - Green - Brown - Gold||
 ||R20	||1k||	Resistor||	1||	Panasonic||	CF14JT1K00CT-ND|| Brown - Black - Red - Gold||
