--- a/wiki/OpenEVSE_DIY_LCD_spec.wiki
+++ b/wiki/OpenEVSE_DIY_LCD_spec.wiki
@@ -14,24 +14,23 @@ http://open-evse.googlecode.com/files/RGB_i2c_v1plusRTC_TH.zip
 
 
 == BOM ==
-||Part||Value||	Type||	Quantity||	Manufacture||	Part Number||
+|| *Part* || *Value* ||	*Type* || *Quantity* ||	*Manufacture* ||	*Part Number* ||
 ||Board||	||	Board||	1||	OpenEVSE||	Board||
-|| R1 || 220 ||	Resistor || 1 || Panasonic || || CF14JT2K40CT-ND ||	
+|| R1 || 220 ||	Resistor || 1 || Panasonic || CF14JT2K40CT-ND ||	
 || R2, R3 || 330 || Resistor || 2 || Panasonic || CF14JT2K40CT-ND ||	
 || R4, R5 || 4.7k || Resistor || 2 || Panasonic || CF14JT2K40CT-ND ||	
-|| IC1 || MCP23017 || 1 || IO expander || MPC23017-E/SP-ND ||
+|| IC1 || MCP23017 || IO expander || 1 || MPC || MPC23017-E/SP-ND ||
 || C1 || .1uf || Capacitor || 1 || Kemet || 399-9872-1-ND ||
 ||Contrast|| 10k || Trimpot || 1 || Panasonic || D4AA14-ND ||
-|| Spacers || 0.25" || 4 || Bivar Inc. || 492-1104-ND ||
+|| Spacers || 0.25" || Spacer || 4 || Bivar Inc. || 492-1104-ND ||
 || Cable || 4 pin 0.1" || Cable || 1 || Pololu || ||
 ||header || 0.1" || PC pins || 25 ||  	Nooelec	|| ||
 || LCD || RGB Common Anaode || Display || 1 ||	Nooelec || ||				
-
-RTC Option					
+|| *RTC Option* || || || || || ||					
 ||C2|| .1uf || capacitor || 1 ||Kemet||	399-9872-1-ND ||
 ||Y1|| 32768 || crystal || 1 || || X1123-ND ||
 ||IC2|| DS1307 || IC || 1 || Maxim || DS1307+-ND ||
-|| Battery holder || 12mm || 1 || || 3000K-ND ||
+|| Battery holder || 12mm || || 1 || || 3000K-ND ||
 
 ==Resistor Code==
 http://www.adafruit.com/adablog/wp-content/uploads/2013/09/resistordecoder.png
