Edited wiki page OpenEVSE_DIY_LCD_spec through web user interface.

--- a/wiki/OpenEVSE_DIY_LCD_spec.wiki
+++ b/wiki/OpenEVSE_DIY_LCD_spec.wiki
@@ -34,7 +34,9 @@ http://open-evse.googlecode.com/files/RGB_i2c_v1plusRTC_TH.zip
 || Battery || CR1220 || Battery || 1 || Misc || ||
 
 ==Resistor Code==
-http://www.adafruit.com/adablog/wp-content/uploads/2013/09/resistordecoder.png
+Here is a handy Resistor chart created by Bret Victor. Click on the chart for a printable PDF.
+[http://worrydream.com/ResistorDecoder/resistors.png
+http://worrydream.com/ResistorDecoder/resistors.pdf]
  
 == Soldering ==
 
